--- a/components/custumComp/style.css
+++ b/components/custumComp/style.css
@@ -10,17 +10,18 @@ body {
 @media print {
   @page {
     size: A4;          /* Force A4 paper size */
-    margin: 10mm;      /* Adjust margins as needed */
+    margin: 2mm !important;      /* Adjust margins as needed */
   }
 
   body {
-    font-size: 14pt;   /* Adjust font size for readability */
+    font-size: 14px !important;   /* Adjust font size for readability */
     line-height: 1.6;  /* Better spacing for Urdu script */
    
   }
 
 
 }
+
 
 
 
